cmake_minimum_required(VERSION 3.20)
project(untitled12)

set(CMAKE_CXX_STANDARD 98)

add_executable(untitled12 main.cpp Car.cpp Car.h Section.cpp Section.h Metropolis.cpp Metropolis.h Road.cpp Road.h files.h files.cpp City.cpp City.h generic_map.h generic_map.cpp LuxuryCar.cpp LuxuryCar.h FamilyCar.cpp FamilyCar.h SportsCar.cpp SportsCar.h MASERATI.cpp MASERATI.h )
